--- a/.github/workflows/keras_unit_test_core.yml
+++ b/.github/workflows/keras_unit_test_core.yml
@@ -9,56 +9,7 @@ on:
       - main
 
 jobs:
-  # run_tests_linux:
-  #   strategy:
-  #     matrix:
-  #       tf_version: ['2.9.0', '2.13.0']
-  #       python_version: ['3.8', '3.9', '3.10']
-  #       opset_version: ['18', '15']
-  #       ort_version: ['1.16.3']
-  #       onnx_version: ['1.15.0']
-
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #     - name: Set up Python (${{ matrix.python_version }})
-  #       uses: actions/setup-python@v5
-  #       with:
-  #         python-version: ${{ matrix.python_version }}
-
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
-
-  #     - name: Install dependencies (tf v${{ matrix.tf_version }})
-  #       shell: bash
-  #       run: |
-  #         python -m pip install --upgrade pip
-  #         pip install onnxconverter-common
-  #         pip install onnx==${{ matrix.onnx_version }}
-  #         pip install h5py==3.7.0
-  #         pip install parameterized
-  #         pip install timeout-decorator
-  #         pip install coloredlogs flatbuffers
-  #         pip install tensorflow==${{ matrix.tf_version }}
-  #         pip install pytest pytest-cov pytest-runner
-  #         pip install onnxruntime==${{ matrix.ort_version }}
-  #         pip uninstall -y protobuf
-  #         pip install "protobuf~=3.20"
-  #         pip install -e .
-
-  #         echo "----- List all of depdencies:"
-  #         pip freeze --all
-
-  #     - name: Run keras unit tests
-  #       run: |
-  #         set -x
-  #         status=0
-  #         python -c "import onnxruntime"
-  #         python -c "import onnxconverter_common"
-  #         pytest tests/keras2onnx_unit_tests --doctest-modules --junitxml=junit/test-results.xml
-  #         exit $status
-
-  run_tests_windows:
+  run_tests:
     strategy:
       matrix:
         tf_version: ['2.9.0', '2.13.0']
@@ -66,8 +17,9 @@ jobs:
         opset_version: ['18', '15']
         ort_version: ['1.16.3']
         onnx_version: ['1.15.0']
+        os: ['ubuntu-latest', 'windows-2022']
 
-    runs-on: windows-2022
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Set up Python (${{ matrix.python_version }})
@@ -78,7 +30,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install dependencies (tf v${{ matrix.tf_version }})
+      - name: Install dependencies (TF-v${{ matrix.tf_version }})
         shell: bash
         run: |
           python -m pip install --upgrade pip
@@ -98,13 +50,13 @@ jobs:
           echo "----- List all of depdencies:"
           pip freeze --all
 
-      - name: Run keras unit tests
+      - name: Run keras unit tests (${{ matrix.os }})
         run: |
           python -c "import onnxruntime"
           python -c "import onnxconverter_common"
           pytest tests/keras2onnx_unit_tests --doctest-modules --junitxml=junit/test-results.xml
 
-  run_tests_linux_TF_15:
+  run_tests_tf_15:
     strategy:
       matrix:
         tf_version: ['1.15.0']
@@ -112,91 +64,80 @@ jobs:
         opset_version: ['18', '15']
         ort_version: ['1.14.1'] # Max version that supports python 3.7
         onnx_version: ['1.14.1'] # Max version that supports python 3.7
+        os: ['ubuntu-latest', 'windows-2022']
 
+    runs-on: ${{ matrix.os }}
+
+    steps:
+      - name: Set up Python (${{ matrix.python_version }})
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python_version }}
+
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install dependencies (tf v${{ matrix.tf_version }})
+        shell: bash
+        run: |
+          python -m pip install --upgrade pip
+          pip install onnxconverter-common
+          pip install onnx==${{ matrix.onnx_version }}
+          pip uninstall -y protobuf
+          pip install "protobuf~=3.20"
+          pip install h5py==3.7.0
+          pip install parameterized
+          pip install timeout-decorator
+          pip install coloredlogs flatbuffers
+          pip install tensorflow==${{ matrix.tf_version }}
+          pip install pytest pytest-cov pytest-runner
+          pip install onnxruntime==${{ matrix.ort_version }}
+          pip install numpy==1.19.0
+          pip install -e .
+
+          echo "----- List all of depdencies:"
+          pip freeze --all
+
+      - name: Run keras unit tests (${{ matrix.os }})
+        run: |
+          python -c "import onnxruntime"
+          python -c "import onnxconverter_common"
+          pytest tests/keras2onnx_unit_tests --doctest-modules --junitxml=junit/test-results.xml
+
+  publish-test-results:
+    name: "Publish Tests Results to Github"
+    needs: run_tests
     runs-on: ubuntu-latest
-
+    permissions:
+      checks: write
+      pull-requests: write
+    if: always()
     steps:
-      - name: Set up Python (${{ matrix.python_version }})
-        uses: actions/setup-python@v5
+      - name: Download Artifacts
+        uses: actions/download-artifact@v3
         with:
-          python-version: ${{ matrix.python_version }}
+          path: artifacts
 
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        with:
+          files: "artifacts/**/*.xml"
 
-      - name: Install dependencies (tf v${{ matrix.tf_version }})
-        shell: bash
-        run: |
-          python -m pip install --upgrade pip
-          pip install onnxconverter-common
-          pip install onnx==${{ matrix.onnx_version }}
-          pip uninstall -y protobuf
-          pip install "protobuf~=3.20"
-          pip install h5py==3.7.0
-          pip install parameterized
-          pip install timeout-decorator
-          pip install coloredlogs flatbuffers
-          pip install tensorflow==${{ matrix.tf_version }}
-          pip install pytest pytest-cov pytest-runner
-          pip install onnxruntime==${{ matrix.ort_version }}
-          pip install numpy==1.19.0
-          pip install -e .
-
-          echo "----- List all of depdencies:"
-          pip freeze --all
-
-      - name: Run keras unit tests
-        run: |
-          set -x
-          status=0
-          python -c "import onnxruntime"
-          python -c "import onnxconverter_common"
-          pytest tests/keras2onnx_unit_tests --doctest-modules --junitxml=junit/test-results.xml
-          exit $status
-
-  run_tests_windows_TF_15:
-    strategy:
-      matrix:
-        tf_version: ['1.15.0']
-        python_version: ['3.7'] # Max version that supports tf 1.15
-        opset_version: ['18', '15']
-        ort_version: ['1.14.1'] # Max version that supports python 3.7
-        onnx_version: ['1.14.1'] # Max version that supports python 3.7
-
-    runs-on: windows-2022
-
+  publish-test-results-tf-15:
+    name: "Publish Tests Results(TF15) to Github"
+    needs: run_tests_tf_15
+    runs-on: ubuntu-latest
+    permissions:
+      checks: write
+      pull-requests: write
+    if: always()
     steps:
-      - name: Set up Python (${{ matrix.python_version }})
-        uses: actions/setup-python@v5
+      - name: Download Artifacts
+        uses: actions/download-artifact@v3
         with:
-          python-version: ${{ matrix.python_version }}
+          path: artifacts
 
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install dependencies (tf v${{ matrix.tf_version }})
-        shell: bash
-        run: |
-          python -m pip install --upgrade pip
-          pip install onnxconverter-common
-          pip install onnx==${{ matrix.onnx_version }}
-          pip uninstall -y protobuf
-          pip install "protobuf~=3.20"
-          pip install h5py==3.7.0
-          pip install parameterized
-          pip install timeout-decorator
-          pip install coloredlogs flatbuffers
-          pip install tensorflow==${{ matrix.tf_version }}
-          pip install pytest pytest-cov pytest-runner
-          pip install onnxruntime==${{ matrix.ort_version }}
-          pip install numpy==1.19.0
-          pip install -e .
-
-          echo "----- List all of depdencies:"
-          pip freeze --all
-
-      - name: Run keras unit tests
-        run: |
-          python -c "import onnxruntime"
-          python -c "import onnxconverter_common"
-          pytest tests/keras2onnx_unit_tests --doctest-modules --junitxml=junit/test-results.xml
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        with:
+          files: "artifacts/**/*.xml"
