--- a/.github/workflows/keras_application_test_core.yml
+++ b/.github/workflows/keras_application_test_core.yml
@@ -154,15 +154,10 @@ jobs:
       pull-requests: write
     if: always()
     steps:
-      - name: Download Artifacts
-        uses: actions/download-artifact@v3
-        with:
-          path: artifacts
-
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
         with:
-          files: "artifacts/**/*.xml"
+          files: "junit/test-results.xml"
 
   publish-test-results-tf-15:
     name: "Publish Tests Results(TF15) to Github"
@@ -173,12 +168,7 @@ jobs:
       pull-requests: write
     if: always()
     steps:
-      - name: Download Artifacts
-        uses: actions/download-artifact@v3
-        with:
-          path: artifacts
-
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
         with:
-          files: "artifacts/**/*.xml"
+          files: "junit/test-results.xml"
