--- a/.github/workflows/keras_unit_test_core.yml
+++ b/.github/workflows/keras_unit_test_core.yml
@@ -12,10 +12,12 @@ jobs:
   run_tests:
     strategy:
       matrix:
-        tf_version: ['2.9.0', '2.13.0']
-        python_version: ['3.8', '3.9', '3.10']
-        opset_version: ['18', '15']
-        ort_version: ['1.16.3']
+        # tf_version: ['2.9.0', '2.13.0']
+        # python_version: ['3.8', '3.9']
+        # opset_version: ['18', '15']
+        tf_version: ['2.9.0']
+        python_version: ['3.9']
+        opset_version: ['18']        ort_version: ['1.16.3']
         onnx_version: ['1.15.0']
         os: ['ubuntu-latest', 'windows-2022']
 
@@ -55,6 +57,13 @@ jobs:
           python -c "import onnxruntime"
           python -c "import onnxconverter_common"
           pytest tests/keras2onnx_unit_tests --doctest-modules --junitxml=junit/test-results.xml
+
+      - name: Upload Test Results
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: Test Results (${{ matrix.tf_version }}-${{ matrix.python_version }}-${{ matrix.os }})
+          path: ./**/test-results*.xml
 
   run_tests_tf_15:
     strategy:
@@ -109,7 +118,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: Test Results (${{ matrix.tf_version }}-${{ matrix.python_version }}-${{ matrix.os }})
-          path: pytest.xml
+          path: ./**/test-results*.xml
 
 
   publish-test-results:
@@ -121,10 +130,15 @@ jobs:
       pull-requests: write
     if: always()
     steps:
+      - name: Download Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          path: artifacts
+
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
         with:
-          files: "junit/test-results.xml"
+          files: "artifacts/**/*.xml"
 
   publish-test-results-tf-15:
     name: "Publish Tests Results(TF15) to Github"
@@ -135,7 +149,12 @@ jobs:
       pull-requests: write
     if: always()
     steps:
+      - name: Download Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          path: artifacts
+
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
         with:
-          files: "junit/test-results.xml"
+          files: "artifacts/**/*.xml"
