--- a/.github/workflows/pretrained_model_tests_core.yml
+++ b/.github/workflows/pretrained_model_tests_core.yml
@@ -1,4 +1,4 @@
-name: Pretrained Model Test (Core)
+name: Pretrained Model Test (CI)
 
 on:
   pull_request:
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   run_tests:
