--- a/.github/workflows/unit_tests_core.yml
+++ b/.github/workflows/unit_tests_core.yml
@@ -9,16 +9,21 @@ on:
       - main
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.sha }}-${{ github.event_name == 'workflow_dispatch' }}
+  cancel-in-progress: true
+
 jobs:
   run_tests:
     strategy:
+      fail-fast: false
       matrix:
-        tf_version: ['2.9.0', '2.13.0']
+        tf_version: ['2.9.0', '2.15.0']
         python_version: ['3.8', '3.9']
         opset_version: ['18', '15']
         ort_version: ['1.16.3']
         os: ['ubuntu-latest', 'windows-2022']
-
+    if: ${{ matrix.tf_version == '2.9.0' && matrix.python_version == '3.8' }}
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -74,6 +79,7 @@ jobs:
           path: ./**/test-results-*.xml
 
   publish-test-results:
+    fail-fast: false
     name: "Publish Tests Results to Github"
     needs: run_tests
     runs-on: ubuntu-latest
