--- a/.github/workflows/unit_tests_core.yml
+++ b/.github/workflows/unit_tests_core.yml
@@ -23,8 +23,9 @@ jobs:
         opset_version: ['18', '15']
         ort_version: ['1.16.3']
         os: ['ubuntu-latest', 'windows-2022']
-    if: ${{ matrix.tf_version == '2.9.0' && matrix.python_version == '3.8' }}
     runs-on: ${{ matrix.os }}
+    # if: ${{ matrix.tf_version == '2.9.0' && matrix.python_version == '3.8' }}
+    if: ${{ matrix.tf_version == '2.9.0' }}
 
     steps:
       - name: Set up Python (${{ matrix.python_version }})
@@ -79,7 +80,6 @@ jobs:
           path: ./**/test-results-*.xml
 
   publish-test-results:
-    fail-fast: false
     name: "Publish Tests Results to Github"
     needs: run_tests
     runs-on: ubuntu-latest
