--- a/.github/workflows/keras_unit_test_core.yml
+++ b/.github/workflows/keras_unit_test_core.yml
@@ -9,9 +9,14 @@ on:
       - main
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.sha }}-${{ github.event_name == 'workflow_dispatch' }}
+  cancel-in-progress: true
+
 jobs:
   run_tests:
     strategy:
+      fail-fast: false
       matrix:
         tf_version: ['2.9.0', '2.13.0']
         python_version: ['3.8', '3.9']
