--- a/.github/workflows/unit_tests_core.yml
+++ b/.github/workflows/unit_tests_core.yml
@@ -18,14 +18,22 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        tf_version: ['2.9.0', '2.15.0']
-        python_version: ['3.8', '3.9']
+        os: ['ubuntu-latest', 'windows-2022']
         opset_version: ['18', '15']
         ort_version: ['1.16.3']
-        os: ['ubuntu-latest', 'windows-2022']
+        onnx_version: [''1.16.1']
+        include:
+          - tf_version: '2.9.0'
+            python_version: '3.8'
+          - tf_version: '2.15.0'
+            python_version: '3.9'
+          - tf_version: '1.15.5'
+            python_version: '3.7'
+            os: 'ubuntu-latest'
+            opset_version: '15'
+            ort_version: '1.14.1'
+            onnx_version: '1.14.1'
     runs-on: ${{ matrix.os }}
-    # if: ${{ matrix.tf_version == '2.9.0' && matrix.python_version == '3.8' }}
-    if: ${{ matrix.tf_version == '2.9.0' }}
 
     steps:
       - name: Set up Python (${{ matrix.python_version }})
@@ -40,7 +48,7 @@ jobs:
         shell: bash
         run: |
           chmod +x ./tests/utils/setup_test_env.sh
-          ./tests/utils/setup_test_env.sh ${{ matrix.tf_version }} ${{ matrix.ort_version }}
+          ./tests/utils/setup_test_env.sh ${{ matrix.tf_version }} ${{ matrix.ort_version }} ${{ matrix.onnx_version }}
 
       - name: Fix Paths (Windows only)
         if: runner.os == 'Windows'
