--- a/.github/workflows/unit_tests_ci.yml
+++ b/.github/workflows/unit_tests_ci.yml
@@ -21,7 +21,7 @@ jobs:
         os: ['ubuntu-latest', 'windows-2022']
         opset_version: ['18', '15']
         ort_version: ['1.16.3']
-        onnx_version: [''1.16.1']
+        onnx_version: ['1.16.1']
         include:
           - tf_version: '2.9.0'
             python_version: '3.8'
