--- a/.github/workflows/unit_tests_ci.yml
+++ b/.github/workflows/unit_tests_ci.yml
@@ -15,24 +15,29 @@ concurrency:
 
 jobs:
   run_tests:
+  name: Test (${{ matrix.python_version }}-${{ matrix.tf_version }}-${{ matrix.opset_version }}-${{ matrix.os }})
     strategy:
       fail-fast: false
       matrix:
         os: ['ubuntu-latest', 'windows-2022']
+        tf_version: ['2.9.0', '2.15.0']
+        python_version: ['3.9']
         opset_version: ['18', '15']
         ort_version: ['1.16.3']
         onnx_version: ['1.16.1']
+        skip_tflite: ['False']
         include:
           - tf_version: '2.9.0'
             python_version: '3.8'
           - tf_version: '2.15.0'
-            python_version: '3.9'
+            python_version: '3.10'
           - tf_version: '1.15.5'
             python_version: '3.7'
             os: 'ubuntu-latest'
             opset_version: '15'
             ort_version: '1.14.1'
             onnx_version: '1.14.1'
+            skip_tflite: 'True'
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -63,7 +68,7 @@ jobs:
         run: |
           export TF2ONNX_TEST_BACKEND=onnxruntime
           export TF2ONNX_TEST_OPSET=${{ matrix.opset_version }}
-          export TF2ONNX_SKIP_TFLITE_TESTS=False
+          export TF2ONNX_SKIP_TFLITE_TESTS=${{ matrix.skip_tflite }}
           export TF2ONNX_SKIP_TFJS_TESTS=True
           export TF2ONNX_SKIP_TF_TESTS=False
           python -m pytest --cov=tf2onnx --cov-report=term --disable-pytest-warnings -r s tests --cov-append --junitxml=junit/test-results.xml
@@ -74,7 +79,7 @@ jobs:
         run: |
           set TF2ONNX_TEST_BACKEND=onnxruntime
           set TF2ONNX_TEST_OPSET=${{ matrix.opset_version }}
-          set TF2ONNX_SKIP_TFLITE_TESTS=False
+          set TF2ONNX_SKIP_TFLITE_TESTS=${{ matrix.skip_tflite }}
           set TF2ONNX_SKIP_TFJS_TESTS=True
           set TF2ONNX_SKIP_TF_TESTS=False
           python -m pytest --cov=tf2onnx --cov-report=term --disable-pytest-warnings -r s tests --cov-append --junitxml=junit/test-results.xml
