--- a/.github/workflows/pretrained_model_tests_ci.yml
+++ b/.github/workflows/pretrained_model_tests_ci.yml
@@ -18,14 +18,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        tf_version: ['2.9.0', '2.15.0']
-        python_version: ['3.9']
         opset_version: ['18', '15']
         ort_version: ['1.16.3']
         onnx_version: ['1.16.1']
         include:
           - tf_version: '2.9.0'
             python_version: '3.8'
+          - tf_version: '2.9.0'
+            python_version: '3.9'
+          - tf_version: '2.15.0'
+            python_version: '3.9'
           - tf_version: '2.15.0'
             python_version: '3.10'
           - tf_version: '1.15.5'
