--- a/.github/workflows/unit_tests_ci.yml
+++ b/.github/workflows/unit_tests_ci.yml
@@ -19,8 +19,6 @@ jobs:
       fail-fast: false
       matrix:
         os: ['ubuntu-latest', 'windows-2022']
-        tf_version: ['2.9.0', '2.15.0']
-        python_version: ['3.9']
         opset_version: ['18', '15']
         ort_version: ['1.16.3']
         onnx_version: ['1.16.1']
@@ -28,14 +26,20 @@ jobs:
         include:
           - tf_version: '2.9.0'
             python_version: '3.8'
+          - tf_version: '2.9.0'
+            python_version: '3.9'
+          - tf_version: '2.15.0'
+            python_version: '3.9'
           - tf_version: '2.15.0'
             python_version: '3.10'
           - tf_version: '1.15.5'
             python_version: '3.7'
+            os: 'ubuntu-latest'
             opset_version: '15'
             ort_version: '1.14.1'
             onnx_version: '1.14.1'
             skip_tflite: 'True'
+
     runs-on: ${{ matrix.os }}
 
     steps:
