--- a/.github/workflows/unit_tests_ci.yml
+++ b/.github/workflows/unit_tests_ci.yml
@@ -30,15 +30,15 @@ jobs:
             python_version: '3.9'
           - tf_version: '2.15.0'
             python_version: '3.9'
-          - tf_version: '2.15.0'
-            python_version: '3.10'
-          - tf_version: '1.15.5'
-            python_version: '3.7'
-            os: 'ubuntu-latest'
-            opset_version: '15'
-            ort_version: '1.14.1'
-            onnx_version: '1.14.1'
-            skip_tflite: 'True'
+          # - tf_version: '2.15.0'
+          #   python_version: '3.10'
+          # - tf_version: '1.15.5'
+          #   python_version: '3.7'
+          #   os: 'ubuntu-latest'
+          #   opset_version: '15'
+          #   ort_version: '1.14.1'
+          #   onnx_version: '1.14.1'
+          #   skip_tflite: 'True'
 
     runs-on: ${{ matrix.os }}
 
