--- a/.github/workflows/unit_tests_ci.yml
+++ b/.github/workflows/unit_tests_ci.yml
@@ -22,8 +22,10 @@ jobs:
         tf_version:
           - '2.9.0'
           - '2.15.0'
-        python_version: '3.9'
-        skip_tflite: 'False'
+        python_version:
+          - '3.9'
+        skip_tflite:
+          - 'False'
         include:
           - tf_version: '2.9.0'
             python_version: '3.8'
