--- a/.github/workflows/unit_tests_ci.yml
+++ b/.github/workflows/unit_tests_ci.yml
@@ -24,19 +24,20 @@ jobs:
           - '2.15.0'
         python_version:
           - '3.9'
-        skip_tflite:
-          - 'False'
+          - '3.10'
         include:
           - tf_version: '2.9.0'
             python_version: '3.8'
             opset_version: '18'
             ort_version: 1.16.3
             onnx_version: 1.16.1
+            skip_tflite: 'False'
           - tf_version: '2.9.0'
             python_version: '3.8'
             opset_version: '15'
             ort_version: 1.16.3
             onnx_version: 1.16.1
+            skip_tflite: 'False'
           # - tf_version: '2.9.0'
           #   python_version: '3.9'
           #   opset_version: '18'
@@ -52,6 +53,7 @@ jobs:
             opset_version: '18'
             ort_version: 1.16.3
             onnx_version: 1.16.1
+            skip_tflite: 'False'
           - tf_version: '1.15.5'
             python_version: '3.7'
             os: 'ubuntu-latest'
