--- a/.github/workflows/unit_tests_ci.yml
+++ b/.github/workflows/unit_tests_ci.yml
@@ -18,9 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-2022]
-        tf_version: ['2.9.0', '2.15.0']
-        python_version: ['3.9', '3.10']
+        os: ['ubuntu-latest', 'windows-2022']
         include:
           - tf_version: '2.9.0'
             python_version: '3.8'
@@ -34,16 +32,16 @@ jobs:
             ort_version: 1.16.3
             onnx_version: 1.16.1
             skip_tflite: 'False'
-          # - tf_version: '2.9.0'
-          #   python_version: '3.9'
-          #   opset_version: '18'
-          #   ort_version: 1.16.3
-          #   onnx_version: 1.16.1
-          # - tf_version: '2.15.0'
-          #   python_version: '3.9'
-          #   opset_version: '18'
-          #   ort_version: 1.16.3
-          #   onnx_version: 1.16.1
+          - tf_version: '2.9.0'
+            python_version: '3.9'
+            opset_version: '18'
+            ort_version: 1.16.3
+            onnx_version: 1.16.1
+          - tf_version: '2.15.0'
+            python_version: '3.9'
+            opset_version: '18'
+            ort_version: 1.16.3
+            onnx_version: 1.16.1
           - tf_version: '2.15.0'
             python_version: '3.10'
             opset_version: '18'
