--- a/.github/workflows/unit_tests_ci.yml
+++ b/.github/workflows/unit_tests_ci.yml
@@ -19,36 +19,49 @@ jobs:
       fail-fast: false
       matrix:
         os: ['ubuntu-latest', 'windows-2022']
+        name:
+          - 'test_01'
+          - 'test_02'
+          - 'test_03'
+          - 'test_04'
+          - 'test_05'
+          - 'test_06'
         include:
-          - tf_version: '2.9.0'
+          - name: 'test_01'
+            tf_version: '2.9.0'
             python_version: '3.8'
             opset_version: '18'
             ort_version: 1.16.3
             onnx_version: 1.16.1
             skip_tflite: 'False'
-          - tf_version: '2.9.0'
+          - name: 'test_02'
+            tf_version: '2.9.0'
             python_version: '3.8'
             opset_version: '15'
             ort_version: 1.16.3
             onnx_version: 1.16.1
             skip_tflite: 'False'
-          - tf_version: '2.9.0'
+          - name: 'test_03'
+            tf_version: '2.9.0'
             python_version: '3.9'
             opset_version: '18'
             ort_version: 1.16.3
             onnx_version: 1.16.1
-          - tf_version: '2.15.0'
+          - name: 'test_04'
+            tf_version: '2.15.0'
             python_version: '3.9'
             opset_version: '18'
             ort_version: 1.16.3
             onnx_version: 1.16.1
-          - tf_version: '2.15.0'
+          - name: 'test_05'
+            tf_version: '2.15.0'
             python_version: '3.10'
             opset_version: '18'
             ort_version: 1.16.3
             onnx_version: 1.16.1
             skip_tflite: 'False'
-          - tf_version: '1.15.5'
+          - name: 'test_06'
+            tf_version: '1.15.5'
             python_version: '3.7'
             os: 'ubuntu-latest'
             opset_version: '15'
