--- a/.github/workflows/unit_tests_ci.yml
+++ b/.github/workflows/unit_tests_ci.yml
@@ -25,7 +25,6 @@ jobs:
           - 'test_03'
           - 'test_04'
           - 'test_05'
-          - 'test_06'
         include:
           - name: 'test_01'
             tf_version: '2.9.0'
@@ -44,9 +43,9 @@ jobs:
           - name: 'test_03'
             tf_version: '2.9.0'
             python_version: '3.9'
-            opset_version: '18'
-            ort_version: 1.16.3
-            onnx_version: 1.16.1
+            opset_version: '15'
+            ort_version: '1.16.3'
+            onnx_version: '1.16.1'
           - name: 'test_04'
             tf_version: '2.15.0'
             python_version: '3.9'
