--- a/.github/workflows/unit_tests_ci.yml
+++ b/.github/workflows/unit_tests_ci.yml
@@ -19,42 +19,42 @@ jobs:
       fail-fast: false
       matrix:
         os: ['ubuntu-latest', 'windows-2022']
+        opset_version: [18, 15]
         name:
-          - 'test_01'
-          - 'test_02'
-          - 'test_04'
-          - 'test_05'
-        skip_tflite: 'False'
+          - 'py38-tf2.9'
+          - 'py39-tf2.15'
+          - 'py310-tf2.15'
+          - 'py37-tf1.15'
         include:
-          - name: 'test_01'
+          - name: 'py38-tf2.9'
             tf_version: '2.9.0'
             python_version: '3.8'
-            opset_version: '18'
+            # opset_version: '18'
             ort_version: '1.16.3'
             onnx_version: '1.16.1'
-            # skip_tflite: 'False'
-          - name: 'test_02'
-            tf_version: '2.9.0'
-            python_version: '3.8'
-            opset_version: '15'
-            ort_version: '1.16.3'
-            onnx_version: '1.16.1'
-            # skip_tflite: 'False'
-          - name: 'test_04'
+            skip_tflite: 'False'
+          # - name: 'test_02'
+          #   tf_version: '2.9.0'
+          #   python_version: '3.8'
+          #   # opset_version: '15'
+          #   ort_version: '1.16.3'
+          #   onnx_version: '1.16.1'
+          #   skip_tflite: 'False'
+          - name: 'py39-tf2.15'
             tf_version: '2.15.0'
             python_version: '3.9'
-            opset_version: '18'
+            # opset_version: '18'
             ort_version: '1.16.3'
             onnx_version: '1.16.1'
-            # skip_tflite: 'False'
-          - name: 'test_05'
+            skip_tflite: 'False'
+          - name: 'py310-tf2.15'
             tf_version: '2.15.0'
             python_version: '3.10'
-            opset_version: '18'
+            # opset_version: '18'
             ort_version: '1.16.3'
             onnx_version: '1.16.1'
-            # skip_tflite: 'False'
-          - name: 'test_06'
+            skip_tflite: 'False'
+          - name: 'py37-tf1.15'
             tf_version: '1.15.5'
             python_version: '3.7'
             os: 'ubuntu-latest'
