--- a/.github/workflows/keras_unit_test_ci.yml
+++ b/.github/workflows/keras_unit_test_ci.yml
@@ -1,4 +1,4 @@
-name: Keras2onnx Unit Tests (CI)
+name: Keras2onnx Unit Test (CI)
 
 on:
   pull_request:
@@ -18,12 +18,28 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        tf_version: ['2.9.0', '2.13.0']
-        python_version: ['3.8', '3.9']
+        name:
+          - 'py38-tf2.9'
+          - 'py39-tf2.10'
+          - 'py39-tf2.15'
+          - 'py310-tf2.14'
+        os: ['ubuntu-latest', 'windows-2022']
         opset_version: ['18', '15']
         ort_version: ['1.16.3']
-        onnx_version: ['1.15.0']
-        os: ['ubuntu-latest', 'windows-2022']
+        onnx_version: ['1.16.1']
+        include:
+          - name: 'py38-tf2.9'
+            tf_version: '2.9.0'
+            python_version: '3.8'
+          - name: 'py39-tf2.10'
+            tf_version: '2.10.0'
+            python_version: '3.9'
+          - name: 'py39-tf2.15'
+            tf_version: '2.15.0'
+            python_version: '3.9'
+          - name: 'py310-tf2.14'
+            tf_version: '2.14.0'
+            python_version: '3.10'
 
     runs-on: ${{ matrix.os }}
 
