--- a/.github/workflows/pretrained_model_tests_ci.yml
+++ b/.github/workflows/pretrained_model_tests_ci.yml
@@ -18,24 +18,34 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        name:
+          - 'py38-tf2.9'
+          - 'py39-tf2.9'
+          - 'py39-tf2.15'
+          - 'py310-tf2.15'
         opset_version: ['18', '15']
         ort_version: ['1.16.3']
         onnx_version: ['1.16.1']
         include:
-          - tf_version: '2.9.0'
+          - name: 'py38-tf2.9'
+            tf_version: '2.9.0'
             python_version: '3.8'
-          - tf_version: '2.9.0'
+          - name: 'py39-tf2.9'
+            tf_version: '2.9.0'
             python_version: '3.9'
-          - tf_version: '2.15.0'
+          - name: 'py39-tf2.15'
+            tf_version: '2.15.0'
             python_version: '3.9'
-          # - tf_version: '2.15.0'
-          #   python_version: '3.10'
-          # - tf_version: '1.15.5'
-          #   python_version: '3.7'
-          #   os: 'ubuntu-latest'
-          #   opset_version: '15'
-          #   ort_version: '1.14.1'
-          #   onnx_version: '1.14.1'
+          - name: 'py310-tf2.15'
+            tf_version: '2.15.0'
+            python_version: '3.10'
+          - name: 'py37-tf1.15'
+            tf_version: '1.15.5'
+            python_version: '3.7'
+            os: 'ubuntu-latest'
+            opset_version: '15'
+            ort_version: '1.14.1'
+            onnx_version: '1.14.1'
 
     runs-on: ubuntu-latest
 
