--- a/.github/workflows/keras_unit_test_ci.yml
+++ b/.github/workflows/keras_unit_test_ci.yml
@@ -67,7 +67,8 @@ jobs:
           pip install onnxruntime==${{ matrix.ort_version }}
           pip uninstall -y protobuf
           pip install "protobuf~=3.20"
-          pip install numpy==1.21.6
+          pip install "numpy<2"
+
           pip install -e .
 
           echo "----- List all of depdencies:"
