Add required jobs for pretrained_model_test.
Signed-off-by: Jay Zhang <jiz@microsoft.com>

--- a/.github/actions/keras_application_test/action.yml
+++ b/.github/actions/keras_application_test/action.yml
@@ -1,6 +1,8 @@
 name: Unit Test Run
 
 inputs:
+  os:
+    description: 'OS type'
   tf_version:
     description: 'TensorFlow version'
   python_version:
