--- a/.github/actions/pretrained_model_test/action.yml
+++ b/.github/actions/pretrained_model_test/action.yml
@@ -37,26 +37,9 @@ runs:
         $base_dir = python -c "import site; print(site.getsitepackages()[0])"
         echo "##vso[task.prependpath]$base_dir/Library/bin"
 
-    - name: Run unit_test (Linux)
-      shell: bash
-      if: runner.os == 'Linux'
+    - name: Run pretrained_model_test
       run: |
-        export TF2ONNX_TEST_BACKEND=onnxruntime
-        export TF2ONNX_TEST_OPSET=${{ inputs.opset_version }}
-        export TF2ONNX_SKIP_TFLITE_TESTS=${{ inputs.skip_tflite }}
-        export TF2ONNX_SKIP_TFJS_TESTS=True
-        export TF2ONNX_SKIP_TF_TESTS=False
-        python -m pytest --cov=tf2onnx --cov-report=term --disable-pytest-warnings -r s tests --cov-append --junitxml=junit/test-results.xml
-        ls
-
-    - name: Run unit_test (Windows)
-      shell: pwsh
-      if: runner.os == 'Windows'
-      run: |
-        set TF2ONNX_TEST_BACKEND=onnxruntime
-        set TF2ONNX_TEST_OPSET=${{ inputs.opset_version }}
-        set TF2ONNX_SKIP_TFLITE_TESTS=${{ inputs.skip_tflite }}
-        set TF2ONNX_SKIP_TFJS_TESTS=True
-        set TF2ONNX_SKIP_TF_TESTS=False
-        python -m pytest --cov=tf2onnx --cov-report=term --disable-pytest-warnings -r s tests --cov-append --junitxml=junit/test-results.xml
+        # TODO: fix unity model path
+        # python tests/run_pretrained_models.py --backend $CI_ONNX_BACKEND --opset $CI_ONNX_OPSET --config tests/unity.yaml || status=$?
+        python tests/run_pretrained_models.py --backend onnxruntime --opset ${{ inputs.opset_version }} --skip_tf_tests False --skip_tflite_tests ${{ inputs.skip_tflite }} --skip_tfjs_tests True --config tests/run_pretrained_models.yaml || status=$?
         ls
