--- a/.github/workflows/pretrained_model_test_ci.yml
+++ b/.github/workflows/pretrained_model_test_ci.yml
@@ -75,8 +75,8 @@ jobs:
       matrix:
         name:
           - 'py38-tf2.13'
-          - 'py39-tf2.14'
-        os: ['windows-2022']
+          - 'py310-tf2.15'
+        os: ['ubuntu-latest', 'windows-2022']
         opset_version: ['18', '15']
         ort_version: ['1.16.3']
         onnx_version: ['1.16.1']
@@ -85,9 +85,9 @@ jobs:
           - name: 'py38-tf2.13'
             tf_version: '2.13.0'
             python_version: '3.8'
-          - name: 'py39-tf2.14'
-            tf_version: '2.14.0'
-            python_version: '3.9'
+          - name: 'py310-tf2.15'
+            tf_version: '2.15.0'
+            python_version: '3.10'
           - name: 'py37-tf1.15'
             tf_version: '1.15.5'
             python_version: '3.7'
